--- a/part2/countries/package.json
+++ b/part2/countries/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "serve build -s -n -L -p $PORT",
+    "start": "serve dist -s -n -L -p $PORT",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
