--- a/part2/countries/package.json
+++ b/part2/countries/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "serve build -s -n -L -p $PORT",
+    "start": "serve -s build -l 3000",
     "dev": "react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
