--- a/part2/countries/package.json
+++ b/part2/countries/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "serve build -s -n -L -p $PORT",
+    "start": "serve build --omit=dev -s -n -L -p $PORT",
     "dev": "react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
