--- a/part2/countries/package.json
+++ b/part2/countries/package.json
@@ -15,9 +15,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "serve build --omit=dev -s -n -L -p $PORT",
+    "start": "serve build -s -n -L -p $PORT",
     "dev": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "CI=false react-scripts build --omit=dev",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
